# OpenTrafficAI

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
traffic_ai/: __init__.py
traffic_ai/agents/: dqn_agent.py  ppo_agent.py
traffic_ai/environment/: traffic_env.py
traffic_ai/scripts/: evaluate.py  train.py  visualize.py
traffic_ai/tests/: init.py  test_agent.py  test_env.py
traffic_ai/utils/: metrics.py  replay_buffer.py
